--- a/app.css
+++ b/app.css
@@ -395,6 +395,7 @@ input {
     padding: 2px;
     color: yellow;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    cursor: pointer;
 }
 .popup-fontselection .content .fonts div:hover {
     background-color: #3c79bc;
